Fixing the vertical alignments.

--- a/nx/blocks/loc/dashboard/project-table.css
+++ b/nx/blocks/loc/dashboard/project-table.css
@@ -29,6 +29,9 @@
   min-height: 66px;
   box-sizing: border-box;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .table-header .table-cell {
